--- a/package.json
+++ b/package.json
@@ -18,7 +18,10 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.0",
     "express": "^4.17.2",
-    "helmet": "^5.0.2"
+    "helmet": "^5.0.2",
+    "pg": "^8.7.3",
+    "readline-sync": "^1.4.10",
+    "sequelize": "^6.17.0"
   },
   "devDependencies": {
     "@types/cors": "^2.8.12",
